--- a/index.html
+++ b/index.html
@@ -13,20 +13,23 @@
 
 <body>
     <header id="header">
-    <nav id="nav-bar">
+      <nav id="nav-bar">
         <a href="#html" id="nav-link">HTML</a> |      
         <a href="#css" id="nav-link">CSS</a> |  
         <a href="#javascript" id="nav-link">JavaScript</a>
-    </nav>
-    <img id="header-img" src="https://s-f.scribdassets.com/images/landing/home2_landing/scribd_logo_horiz_small.svg?1550011407" alt="Scribd logo">
+      </nav>
+      <img id="header-img" src="https://s-f.scribdassets.com/images/landing/home2_landing/scribd_logo_horiz_small.svg?1550011407" alt="Scribd logo">
     </header>
 
-    <iframe id="video" width="420" height="315"
-    src="https://www.youtube.com/embed/mkdvv2bRzhg">
-    </iframe>
+  <iframe id="video" width="420" height="315"
+  src="https://www.youtube.com/embed/mkdvv2bRzhg">
+  </iframe>
 
-    <form id="form">
-    <label id="email-label">Input your email here:</label>
-    <input type="email"></input>
-    </form>
+  <form action="https://www.freecodecamp.com/email-submit" id="form">
+    <label id="email-label">Enter your email to keep up to date with all the latest updates on Scribd!</label>
+    <br/>
+    <input type="email" placeholder="email" name="email">
+    <input type="submit" id="submit">
+
+  </form>
 </body>
